<resources>
    <string name="app_name">onMessenger</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="settings">Settings</string>
    <string name="find_friends">Find Friends</string>
    <string name="logout">Logout</string>
    <string name="title_activity_temp_settings">TempSettings</string>
    <string name="new_group">New Group</string>
    <string name="message_input_hint">Message ...</string>
    <string name="create_account_text">Create Account</string>
    <string name="password_hint">password ...</string>
    <string name="email_hint">email ...</string>
    <string name="sender_text">Deraviv</string>
    <string name="message_text">Hi John, This is the last time I want warn you</string>
    <string name="share_pref_key">SharePreferencesKey_78937</string>
    <string name="enter_phone_number_hint">Enter phone number ...</string>
    <string name="send_verification_code_btn_text">Send Verification Code</string>
    <string name="prefer_email_login_text">Prefer email login ?</string>
    <string name="company_footer_text">onMessenger 2019</string>
    <string name="password_login_pw_hint">Password ...</string>
    <string name="login_email_input_hint">Email ...</string>
    <string name="verification_code_hint">- - - - - -</string>
    <string name="enter_your_phone_number_text">Enter your phone number</string>
    <string name="verify_button_text">verify</string>
    <string name="phone_number_hint">e.g 08189348939</string>
    <string name="verify_code_header_text">Enter Verification Code</string>
    <string name="ff_username_sample">Johngorithm</string>
    <string name="ff_status_sample">Coding and loving it</string>
</resources>
